--- a/react/package.json
+++ b/react/package.json
@@ -13,7 +13,10 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.3",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.5",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
