--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_DATABASE: db
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: cforeveryone
+      MYSQL_ROOT_PASSWORD: Fe18a135.
     ports:
       - "3306:3306"
