--- a/react/package.json
+++ b/react/package.json
@@ -15,7 +15,10 @@
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.3",
     "dotenv": "^16.3.1",
+    "laravel-echo": "^1.15.3",
     "openai": "^4.24.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.5",
     "react-copy-to-clipboard": "^5.1.0",
