--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.6.3",
     "dotenv": "^16.3.1",
+    "framer-motion": "^11.0.3",
     "laravel-echo": "^1.15.3",
     "openai": "^4.24.1",
     "pusher": "^5.2.0",
